--- a/index.html
+++ b/index.html
@@ -7,82 +7,33 @@
         <title>Landing Page</title>
 
         <!-- Load stylesheet -->
-        <link rel="stylesheet" type="text/css" href="css/grid.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
 
         <!-- Add any custom fonts here -->
-
 
     </head>
 
 
     <body>
 
-    <!-- These are some sample rows and columns for you to edit. Delete any that you don't need! -->
-    <div class="row">
-       <div class="column">
-         <h1>One column</h1>
-       </div>
-    </div>
+      <!--  Begin grid container-->
+      <div class="container">
 
+        <!-- Your HTML content below here -->
 
-    <div class="row">
-       <div class="column">
-         <h2>Two equal columns</h2>
-       </div>
-       <div class="column">
-         <h2>Two equal columns</h2>
-       </div>
-    </div>
+          <div class="section one"> <h1>Some title</h1> </div>
 
-
-    <div class="row">
-       <div class="column one-half">
-         <h2>One half</h2>
-       </div>
-       <div class="column one-quarter">
-         <h2>One quarter</h2>
-       </div>
-       <div class="column one-quarter">
-         <h2>One quarter</h2>
-       </div>
-    </div>
-
-
-    <div class="row">
-      <div class="column"><p>Six equal columns</p></div>
-      <div class="column"><p>Six equal columns</p></div>
-      <div class="column"><p>Six equal columns</p></div>
-      <div class="column"><p>Six equal columns</p></div>
-      <div class="column"><p>Six equal columns</p></div>
-      <div class="column"><p>Six equal columns</p></div>
-    </div>
-
-
-    <div class="row">
-      <div class="column three-fifths"><p>Three fifths</p></div>
-      <div class="column two-fifths"><p>Two fifths</p></div>
-    </div>
-
-
-    <div class="row">
-      <div class="column">
-        <!-- Replace with your blog URL -->
-        <a href="http://google.com">My blog</a>
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="column">
-          <h2>Two equal columns</h2>
-          <div class="row">
-            <div class="column"><p>A row within a column</p></div>
-            <div class="column"><p>A row within a column</p></div>
+          <div class="section two">
+            <h2>Section Two</h2>
+            <p>A long paragraph about nothing in particular.</p>
           </div>
-      </div>
-      <div class="column"><h2>Two equal columns</h2></div>
-    </div>
+
+          <div class="section three"> Section three  </div>
+          <div class="section four"> Section four  </div>
+
+          <div class="section five"> <a href="https://google.com">A link to Google</a> </div>
+
+      </div> <!-- End grid container -->
 
     </body>
 
